move home stuff to own controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,7 @@
 en:
     syllabus: "Syllabus"
     announcements: "Announcements"
+    submissions: "Submissions"
     ago: "ago"
     by: "by"
     was_graded: "was graded"
