--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -22,6 +22,7 @@
 nl:
     syllabus: "Studiewijzer"
     announcements: "Mededelingen"
+    submissions: "Opdrachten"
     ago: "geleden"
     by: "door"
     was_graded: "is nagekeken"
