translations for hands

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,9 +22,22 @@
 en:
     syllabus: "Syllabus"
     announcements: "Announcements"
-    submissions: "Submissions"
+    submissions: "Progress"
     ago: "ago"
     by: "by"
     was_graded: "was graded"
     materials: "materials"
     other: "other"
+    you_submitted: "You submitted %{name}"
+    check_results: "Check results"
+    hands:
+        staff_are_currently_available: "%{number} staff are currently available"
+        request_assistance_in_class: "Request assistance in class!"
+        briefly_summarize: "Briefly summarize your question"
+        subject: "About which assignment?"
+        location: "Enter your location"
+        ask_for_assistance: "Ask for assistance"
+        you_are_number_1_in_line: "You are number %{number} in line."
+        wait_is_over: "Het wachten is voorbij!"
+        is_looking_to_help_you: "%{name} is looking to assist you right now"
+        cancel_request: "Cancel request"
