make it prettier

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -32,8 +32,7 @@ nl:
     you_submitted_ago: "Je hebt deze opdracht %{time} geleden ingestuurd."
     see_submissions_page: "Zie de voortgangspagina voor een overzicht."
     check_results: "Check-resultaten"
-    assignment: "Opdracht"
-    overview: "Overzicht scores"
+    overview: "Resultaten"
     weight: "weging"
     hands:
         staff_are_currently_available:
