--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,8 +32,7 @@ en:
     you_submitted_ago: "You have submitted this problem set %{time} ago."
     see_submissions_page: "See the progress page for an overview."
     check_results: "Check results"
-    assignment: "Assignment"
-    overview: "Grades overview"
+    overview: "Results"
     weight: "weight"
     hands:
         staff_are_currently_available:
