--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,7 @@ en:
     by: "by"
     was_graded: "was graded"
     materials: "materials"
+    modules: "modules"
     other: "other"
     you_submitted: "You submitted %{name}"
     you_submitted_ago: "You have submitted this problem set %{time} ago."
