--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -49,6 +49,7 @@ nl:
         wait_is_over: "Het wachten is voorbij!"
         is_looking_to_help_you: "%{name} is op dit moment op zoek naar je om je te assisteren"
         cancel_request: "Annuleren"
+        link: "Geef je Zoom-link"
 
     activerecord:
       errors:
