clean up submissions page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
     you_submitted: "You submitted %{name}"
     you_submitted_ago: "You have submitted this problem set %{time} ago."
     see_submissions_page: "See the progress page for an overview."
+    files_submitted: "Submitted files:"
     check_results: "Check results"
     overview: "Results"
     weight: "weight"
