additional fixes for submit box

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
     syllabus: "Syllabus"
     announcements: "Announcements"
     submissions: "Progress"
+    submissions_page: "submissions page"
 
     ago: "ago"
     by: "by"
@@ -27,20 +28,20 @@ en:
     sign_in: "Sign in"
 
     submit:
-        instructions: Submit your solution here. Some solutions may be automatically checked for correctness, other solutions will be assessed manually.
+        instructions: Submit your solution here. Some assignments may be automatically checked for correctness, others will be assessed manually.
         url_field: Paste URL of your project here
         button: "Submit"
         answers_will_be_submitted: Your answers to the questions in the form above will be submitted.
         you_submitted: "You submitted %{name}"
         you_submitted_ago: "You have submitted this problem set %{time} ago."
-        see_submissions_page: "See the progress page for an overview of your previous submissions."
-        check_feedback: "Check your feedback on the progress page."
+        see_submissions_page: "Check your submissions and feedback on the %{submissions_page}."
         until_deadline_new_version: 'Usually, you can submit another version until the deadline the passes.'
         files_submitted: "Submitted files:"
         check_results: "Check results"
         overview: "Results"
         weight: "weight"
         at_the_end_of_page: 'Submit your solution at the end of the page'
+        course_not_open: 'This course does not currently accept submissions.'
         cant_not_logged_in: "You can't submit a solution because you are not logged in."
         cant_resubmit: "You can't currently re-submit."
         cant_resubmit_explainer: "Your solution is queued for assessment, so you can't submit a new solution now. Check back later to see the results or to re-submit. If you think you should be able to submit, feel free to contact the course's staff!"
