--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -28,7 +28,7 @@ nl:
     sign_in: "Inloggen"
 
     submit:
-        instructions: Stuur je hier oplossing in. Sommige opdrachten kunnen meteen automatisch gecheckt worden, en andere worden handmatig nagekeken.
+        instructions: Stuur hier je oplossing in. Sommige opdrachten kunnen meteen automatisch gecheckt worden, en andere worden handmatig nagekeken.
         url_field: Geef de URL van je project
         button: "Insturen"
         answers_will_be_submitted: De antwoorden die je in het formulier hierboven hebt ingevuld worden ingestuurd.
