--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -31,7 +31,7 @@ nl:
         instructions: Stuur hier je oplossing in. Sommige opdrachten kunnen meteen automatisch gecheckt worden, en andere worden handmatig nagekeken.
         url_field: Geef de URL van je project
         button: "Insturen"
-        answers_will_be_submitted: De antwoorden die je in het formulier hierboven hebt ingevuld worden ingestuurd.
+        answers_will_be_submitted: Je antwoorden in het formulier hierboven worden ingestuurd.
         you_submitted: "Je hebt %{name} ingezonden"
         you_submitted_ago: "Je hebt deze opdracht %{time} geleden ingestuurd."
         see_submissions_page: "Bekijk je inzendingen en feedback op de %{submissions_page}."
@@ -40,6 +40,7 @@ nl:
         check_results: "Check-resultaten"
         overview: "Resultaten"
         weight: "weging"
+        submit_is_graded: 'Je inzending is nagekeken en daarom kun je geen nieuwe versie meer insturen.'
         at_the_end_of_page: 'Verstuur je oplossing onderaan deze pagina'
         course_not_open: 'Deze cursus is op dit moment niet geopend voor inzendingen.'
         cant_not_logged_in: "Je kunt geen oplossing insturen omdat je niet ingelogd bent."
@@ -47,7 +48,7 @@ nl:
         cant_resubmit_explainer: "Je oplossing staat in de rij voor beoordeling, dus je kunt nu geen nieuwe oplossing insturen. Check later nog eens om de resultaten te zien of opnieuw in te sturen. Als je denkt dat je op dit moment al zou moeten kunnen insturen, laat het dan gerust weten!"
         files: bestanden
         file_groups:
-            required: Vereiste
+            required: Benodigde
             optional: Optionele
 
     hands:
