--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -277,5 +277,5 @@ nl:
       formats:
         default: "%a %d %b %Y %H:%M:%S %Z"
         long: "%d %B %Y %H:%M"
-        short: "%d %b %H:%M"
+        short: "%a %d %b %H:%M"
       pm: "'s middags"
