allow locking submits

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -51,8 +51,10 @@ nl:
         at_the_end_of_page: 'Verstuur je oplossing onderaan deze pagina'
         course_not_open: 'Deze cursus is op dit moment niet geopend voor inzendingen.'
         cant_not_logged_in: "Je kunt geen oplossing insturen omdat je niet ingelogd bent."
-        cant_resubmit: "Je kunt op dit moment niet opnieuw insturen."
+        cant_resubmit: "Je kunt op dit moment niet insturen."
         cant_resubmit_explainer: "Je oplossing staat in de rij voor beoordeling, dus je kunt nu geen nieuwe oplossing insturen. Check later nog eens om de resultaten te zien of opnieuw in te sturen. Als je denkt dat je op dit moment al zou moeten kunnen insturen, laat het dan gerust weten!"
+        submit_locked: "Deze opdracht is gesloten voor inzendingen."
+        submit_locked_explainer: "Als je denkt dat je op dit moment zou moeten kunnen insturen, laat het dan gerust weten!"
         files: bestanden
         file_groups:
             required: Benodigde
