--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,8 +51,10 @@ en:
         at_the_end_of_page: 'Submit your solution at the end of the page'
         course_not_open: 'This course does not currently accept submissions.'
         cant_not_logged_in: "You can't submit a solution because you are not logged in."
-        cant_resubmit: "You can't currently re-submit."
+        cant_resubmit: "You can't currently submit."
         cant_resubmit_explainer: "Your solution is queued for assessment, so you can't submit a new solution now. Check back later to see the results or to re-submit. If you think you should be able to submit, feel free to contact the course's staff!"
+        submit_locked: "This problem is locked for submissions."
+        submit_locked_explainer: "If you think you should be able to submit, feel free to contact the course's staff!"
         files: files
         file_groups:
             required: Required
