--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,17 +65,26 @@ en:
             one: One member of staff is available
             other: "%{count} staff are currently available"
         request_assistance_in_class: "Request assistance in class!"
-        briefly_summarize: "Briefly summarize your question"
+        good_morning: "Good morning"
+        good_afternoon: "Good afternoon"
+        good_evening: "Good evening"
+        good_night: "Good night"
+        lets_check_you_in: "Let's check you in."
+        entering_location: "Entering your %{location_type} helps to register attendance"
+        save_my_location: "Save my location"
+        summary: "Summary"
+        location: "Location"
+        briefly_summarize: "Provide a summary of what you would like to discuss"
         subject: "About which assignment?"
-        location: "Enter your location"
+        enter_location: "Enter your location"
         ask_for_assistance: "Ask for assistance"
         posting_question: "Aanvraag wordt verstuurd..."
         you_are_number_1_in_line: "You are number %{number} in line."
         wait_is_over: "The wait is over!"
-        is_looking_to_help_you: "%{name} is looking to assist you right now"
+        is_looking_to_help_you: "%{name} is looking to assist you right now."
         cancel_request: "Cancel request"
         link: "Provide your Zoom link"
-        in_line: "We ask that you wait a bit because you were helped just recently!"
+        in_line: "We ask that you wait a bit because you were helped just recently and it's quite busy!"
 
     account:
         login: Log in using your UvA account
