--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -68,15 +68,24 @@ nl:
             one: Eén medewerker beschikbaar
             other: "%{count} medewerkers beschikbaar"
         request_assistance_in_class: "Zet jezelf hier in de rij voor een vraag:"
-        briefly_summarize: "Geef een korte samenvatting van je vraag"
+        good_morning: "Goedemorgen"
+        good_afternoon: "Goedemiddag"
+        good_evening: "Goedenavond"
+        good_night: "Goedenavond"
+        lets_check_you_in: "Check jezelf in."
+        entering_location: "Geef je %{location_type}"
+        save_my_location: "Sla mijn locatie op"
+        summary: "Samenvatting"
+        location: "Locatie"
+        briefly_summarize: "Geef aan wat je wil bespreken"
         subject: "Over welke opdracht gaat het?"
-        location: "Geef je locatie"
-        ask_for_assistance: "Verstuur aanvraag"
+        enter_location: "Vermeld je huidige %{type}"
+        ask_for_assistance: "Vraag om assistentie"
         posting_question: "Aanvraag wordt verstuurd..."
         you_are_number_1_in_line: "Je bent nummer %{number} in de wachtrij."
         wait_is_over: "Het wachten is voorbij!"
-        is_looking_to_help_you: "%{name} is op dit moment naar je op zoek om je te assisteren"
-        in_line: Je staat even in de wacht omdat je kort geleden geholpen bent!
+        is_looking_to_help_you: "%{name} is op dit moment naar je op zoek om je te assisteren."
+        in_line: Je staat even in de wacht omdat je kort geleden geholpen bent, en het is nogal druk!
         cancel_request: "Annuleren"
         link: "Geef je Zoom-link"
 
