use mini-app for login sequence

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -99,9 +99,10 @@ nl:
         validation_code: Vul je validatiecode in
         validation_code_in_mail: Deze ontvang je per e-mail, maar mogelijk vind je 'm in je spam-map!
         you_can_login: Welkom! Je kunt hier inloggen.
-        guest_needs_activation: Als je inlogt als gast (via e-mail) kun je geen opdrachten insturen tot je account is geactiveerd door de docent.
+        guest_needs_activation: "Let op: als je inlogt als gast (via e-mail) kun je geen opdrachten insturen tot je account is geactiveerd door de docent."
         login_via_uva: Login met UvA-account
         login_via_mail: Login als gast via mail
+        login_or_register: Login of registreer
         logout: Uitloggen
 
     activerecord:
