--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -86,6 +86,39 @@ en:
         link: "Provide your Zoom link"
         in_line: "We ask that you wait a bit because you were helped just recently and it's quite busy!"
 
+        prompts:
+            - "What project are you currently working on, and how can I assist you?"
+            - "Have you encountered any challenges in your coding tasks today?"
+            # - "What programming language are you most comfortable with and why?"
+            - "Is there a particular programming concept you'd like to explore further?"
+            - "Are there any interesting coding techniques you've come across recently?"
+            - "How do you approach problem-solving when faced with a programming task?"
+            - "Are there any specific areas of programming you'd like to improve?"
+            - "What motivated you to pursue programming as a course of study?"
+            - "Do you have any favorite websites you find helpful for programming?"
+            - "What programming projects or ideas are you passionate about outside of class?"
+            - "Have you tried any new programming tools or libraries lately?"
+            - "How do you usually debug your code when you encounter errors?"
+            - "What is your preferred development environment and why?"
+            - "Are there any programming concepts you find particularly challenging?"
+            - "Do you enjoy working on frontend or backend development more?"
+            - "Have you ever contributed to an open-source project? If so, which one?"
+            - "What's your favorite aspect of programming and why?"
+            - "Are there any coding patterns or best practices you follow regularly?"
+            - "How do you stay up-to-date with the latest programming trends and technologies?"
+            - "What advice would you give to someone just starting to learn programming?"
+            - "Do you prefer working on solo coding projects or collaborating in a team?"
+            - "What's the most interesting bug or issue you've encountered while coding?"
+            # - "Have you ever had to refactor a large codebase? How did you approach it?"
+            - "Do you have any strategies for managing your time effectively while coding?"
+            - "What programming projects or exercises have you found most rewarding?"
+            - "Are there any programming languages you're interested in learning in the future?"
+            - "Have you ever built a project that you're particularly proud of? Tell me about it."
+            - "What programming-related hobbies or side projects do you engage in?"
+            - "How do you handle stress or frustration when facing programming challenges?"
+            - "What's your favorite feature or tool?"
+            - "Are there any programming communities or forums you actively participate in?"
+
     account:
         login: Log in using your UvA account
         login_button: Log in
